@@ -24,9 +24,10 @@
 
 #if defined(_WINDOWS)
 
-	#define ZBX_THREAD_ERROR (0)
+	#define ZBX_THREAD_ERROR 0
 
 	#define ZBX_THREAD_HANDLE HANDLE
+	#define ZBX_THREAD_HANDLE_NULL NULL
 
 	#define ZBX_THREAD_ENTRY_POINTER(pointer_name) \
 		unsigned (__stdcall * pointer_name )(void *)
@@ -49,6 +50,7 @@
 	#define ZBX_THREAD_ERROR (-1)
 
 	#define ZBX_THREAD_HANDLE pid_t
+	#define ZBX_THREAD_HANDLE_NULL 0
 
 	#define ZBX_THREAD_ENTRY_POINTER(pointer_name) \
 		unsigned (* pointer_name )(void *)
